--- a/apps/blogs/templates/blogs/post/detail.html
+++ b/apps/blogs/templates/blogs/post/detail.html
@@ -8,4 +8,9 @@
     Published {{ post.publish }} by {{ post.author }}
   </p>
   {{ post.body|linebreaks }}
+  <p>
+    <a href="{% url 'apps/blogs:post_share' post.id %}">
+      Share this post
+    </a>
+  </p>
 {% endblock %}
